+ Add Apps.plist + schemes, WIP: AppsList

--- a/CustomPWA/Resources/Info.plist
+++ b/CustomPWA/Resources/Info.plist
@@ -18,8 +18,229 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>mobilenotes</string>
+		<string>photos-redirect</string>
+		<string>message</string>
+		<string>calshow</string>
+		<string>pcast</string>
+		<string>map</string>
+		<string>itms-apps</string>
+		<string>videos</string>
+		<string>iBooks</string>
+		<string>fmip1</string>
+		<string>shoebox</string>
+		<string>applenewss</string>
+		<string>mqqiapi</string>
+		<string>weixin://dl/scan</string>
+		<string>alipays</string>
+		<string>taobao</string>
+		<string>openApp.jdMobile</string>
+		<string>sinaweibo</string>
+		<string>gifshow</string>
+		<string>awemesso</string>
+		<string>whatsapp</string>
+		<string>fb</string>
+		<string>googleapp</string>
+		<string>instagram</string>
+		<string>googlegmail</string>
+		<string>youtube</string>
+		<string>fb-messenger</string>
+		<string>twitter</string>
+		<string>snapchatp</string>
+		<string>tg</string>
+		<string>googlephotos</string>
+		<string>line</string>
+		<string>comgooglemaps</string>
+		<string>kakaokompassauth</string>
+		<string>nflx</string>
+		<string>sms</string>
+		<string>app://airbnb</string>
+		<string>prefs</string>
+		<string>bilibili</string>
+		<string>baiduyun</string>
+		<string>baidumap</string>
+		<string>cainiao</string>
+		<string>dianping</string>
+		<string>diditaxi</string>
+		<string>dingtalk</string>
+		<string>douban</string>
+		<string>eleme</string>
+		<string>iosamap</string>
+		<string>itlogin-JSMahjong</string>
+		<string>tencent222049</string>
+		<string>wb3098233954</string>
+		<string>inshot</string>
+		<string>snssdk141</string>
+		<string>kugouURL</string>
+		<string>imeituan</string>
+		<string>momochat</string>
+		<string>tencent100422627</string>
+		<string>qqquicklogin</string>
+		<string>qqmusic</string>
+		<string>qunarphone</string>
+		<string>camscanner</string>
+		<string>cn.12306</string>
+		<string>sosomap</string>
+		<string>itms-beta</string>
+		<string>ucbrowser</string>
+		<string>wb1848457140</string>
+		<string>KingsoftOfficeApp</string>
+		<string>orpheuswidget</string>
+		<string>vipshop</string>
+		<string>tencentlaunch1104466820</string>
+		<string>xhsdiscover</string>
+		<string>fleamarket</string>
+		<string>xiami</string>
+		<string>ctripwireless</string>
+		<string>youku</string>
+		<string>zhihu</string>
+		<string>weishiiosscheme</string>
+		<string>weibointernational</string>
+		<string>amazonToAlipay</string>
+		<string>spotify</string>
+		<string>googlechrome</string>
+		<string>pinterest://user/apple</string>
+		<string>paypal</string>
+		<string>dbapi-1</string>
+		<string>ymail://mail/compose</string>
+		<string>imovie</string>
+		<string>linemusic</string>
+		<string>skssdk1372</string>
+		<string>picsart</string>
+		<string>twitterkit-5GCMCsPEKdX9EME6ukXZLIdi9</string>
+		<string>wxa427cc47ce632290</string>
+		<string>amazon</string>
+		<string>timetree</string>
+		<string>mangaup</string>
+		<string>amb7208821cocotsure</string>
+		<string>snowme</string>
+		<string>open-word</string>
+		<string>launch-excel</string>
+		<string>com.netease.mpay.akbpdxr83qe3azsn</string>
+		<string>fb632097603816822</string>
+		<string>cookpad</string>
+		<string>Forest</string>
+		<string>Alook</string>
+		<string>yelp4</string>
+		<string>snssdk1233</string>
+		<string>pinduoduo</string>
+		<string>tmri12123</string>
+		<string>dewuapp</string>
+		<string>videocut</string>
+		<string>mtxx</string>
+		<string>tenvideo</string>
+		<string>wx452924392e7fc5a7</string>
+		<string>rrspjump</string>
+		<string>mttbrowser</string>
+		<string>meituanwaimai</string>
+		<string>snssdk32</string>
+		<string>wb1462309810</string>
+		<string>ulike</string>
+		<string>dragon1967</string>
+		<string>iting</string>
+		<string>wxbcb43ea5d2d6384c</string>
+		<string>quark</string>
+		<string>com.baidu.tieba</string>
+		<string>tantanapp</string>
+		<string>taobaotravel</string>
+		<string>douyutv</string>
+		<string>qqnews</string>
+		<string>wb2982475902</string>
+		<string>brawlstars-cn</string>
+		<string>minecraft:?edu=1</string>
+		<string>baidutranslate</string>
+		<string>wx2654d9155d70a468</string>
+		<string>cmbmobilebank</string>
+		<string>Wx1cb534bb13ba3dbd</string>
+		<string>tmall</string>
+		<string>neteasemail</string>
+		<string>zoomus</string>
+		<string>uber</string>
+		<string>tumblr://x-callback-url/blog?blogName=myblog</string>
+		<string>tim</string>
+		<string>evernote</string>
+		<string>simplemind</string>
+		<string>db-2vxl8w8i8zibqzc</string>
+		<string>mobisystemsofficesuite</string>
+		<string>clearapp</string>
+		<string>calendars</string>
+		<string>goodreads</string>
+		<string>nplayer-http</string>
+		<string>QQ6119B19</string>
+		<string>AVPlayer</string>
+		<string>zakeriphone</string>
+		<string>pcalc</string>
+		<string>skype</string>
+		<string>tvqs</string>
+		<string>onepassword</string>
+		<string>achievement</string>
+		<string>waze</string>
+		<string>vsco</string>
+		<string>vimeo://app.vimeo.com/videos/33881529</string>
+		<string>tweetbot</string>
+		<string>twitch</string>
+		<string>speedtest</string>
+		<string>sgnl</string>
+		<string>photoscan</string>
+		<string>litely</string>
+		<string>launch</string>
+		<string>lastpass</string>
+		<string>imdb://title/tt3569230</string>
+		<string>hulu</string>
+		<string>hbomax</string>
+		<string>hbogo</string>
+		<string>halide</string>
+		<string>googlevoice</string>
+		<string>googletranslate</string>
+		<string>googlesheets</string>
+		<string>comgooglekeep</string>
+		<string>googleearth</string>
+		<string>googledrive</string>
+		<string>googledocs</string>
+		<string>googlecalendar</string>
+		<string>googleassistant</string>
+		<string>flickr</string>
+		<string>fitbit</string>
+		<string>fandango</string>
+		<string>facetune</string>
+		<string>duolingo</string>
+		<string>ddgQuickLink</string>
+		<string>fb225826214141508free</string>
+		<string>doordash</string>
+		<string>clashofclans</string>
+		<string>squarecash</string>
+		<string>cameraplus</string>
+		<string>cakeslice</string>
+		<string>brushstroke</string>
+		<string>com.popcap.ios.BejBlitz</string>
+		<string>anchorfm</string>
+		<string>ancestry</string>
+		<string>fb1761190244145574amplifi</string>
+		<string>fb1414385748867269</string>
+		<string>amc</string>
+		<string>fb1431194636974533</string>
+		<string>garageband</string>
+		<string>hyperlapse</string>
+		<string>citymapper</string>
+		<string>fonts.app</string>
+		<string>viber</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) wants to take pictures</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) wants to use your photos</string>
+	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
+	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ProximaNova-Regular.ttf</string>
+		<string>ProximaNova-Semibold.ttf</string>
+		<string>ProximaNova-Light.ttf</string>
+	</array>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -39,17 +260,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UIAppFonts</key>
-	<array>
-		<string>ProximaNova-Regular.ttf</string>
-		<string>ProximaNova-Semibold.ttf</string>
-		<string>ProximaNova-Light.ttf</string>
-	</array>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>$(PRODUCT_NAME) wants to use your photos</string>
-	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
-	<false/>
-	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) wants to take pictures</string>
 </dict>
 </plist>
